stworzono strukturę html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,133 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Autoprezentacja</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <p><span>Tomasz </span>Ostaszewski</p>
+      </div>
+      <nav>
+        <ul>
+          <li>O mnie</li>
+          <li>Hobby</li>
+          <li>Praca</li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="tel:48123233445">+48 123-233-445</a></li>
+        <li><a href="mailto:example@wxample.com">example@example.com</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>O mnie i koło mnie</h1>
+        <button>Portfolio</button>
+      </section>
+      <section>
+        <h2>O mnie</h2>
+        <div>
+          <h3>Nagłówek 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates
+            saepe, perspiciatis eveniet tenetur voluptatibus iusto facilis
+            commodi! Corrupti, vel quam?
+          </p>
+        </div>
+        <div>
+          <h3>Nagłówek 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates
+            saepe, perspiciatis eveniet tenetur voluptatibus iusto facilis
+            commodi! Corrupti, vel quam?
+          </p>
+        </div>
+        <div>
+          <h3>Nagłówek 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates
+            saepe, perspiciatis eveniet tenetur voluptatibus iusto facilis
+            commodi! Corrupti, vel quam?
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>Hobby</h2>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="./assets/placeholder.png"
+                alt="placeholder"
+                width="200"
+              />
+              <figcaption>
+                <strong>Nazwa</strong>
+                <p>Krótki opis</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/placeholder.png"
+                alt="placeholder"
+                width="200"
+              />
+              <figcaption>
+                <strong>Nazwa</strong>
+                <p>Krótki opis</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./assets/placeholder.png"
+                alt="placeholder"
+                width="200"
+              />
+              <figcaption>
+                <strong>Nazwa</strong>
+                <p>Krótki opis</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Praca</h2>
+        <ul>
+          <li>
+            <img src="./assets/placeholder.png" alt="placeholder" width="200" />
+          </li>
+          <li>
+            <img src="./assets/placeholder.png" alt="placeholder" width="200" />
+          </li>
+          <li>
+            <img src="./assets/placeholder.png" alt="placeholder" width="200" />
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Kontakt</h2>
+        <div>
+          <p><span>Tomasz </span>Ostaszewski</p>
+        </div>
+        <address>
+          <p>Ulica</p>
+          <p>Kod pocztowy, Miejscowość</p>
+          <ul>
+            <li><a href="tel:48123233445">+48 123-233-445</a></li>
+            <li>
+              <a href="mailto:example@wxample.com">example@example.com</a>
+            </li>
+          </ul>
+        </address>
+      </section>
+    </footer>
+  </body>
 </html>
