--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li>O mnie</li>
           <li>Hobby</li>
           <li>Praca</li>
+          <li>Kontakt</li>
         </ul>
       </nav>
       <ul>
